--- a/test-output/index.html
+++ b/test-output/index.html
@@ -25,11 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-<<<<<<< HEAD
       <span class="top-banner-font-1">1 suite, 1 failed test</span>
-=======
-      <span class="top-banner-font-1">1 suite</span>
->>>>>>> 0faa63f60decdf738efa1dff8e7ddf7d9ef36d4d
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -43,11 +39,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Default_suite" class="navigator-link">
-<<<<<<< HEAD
               <span class="suite-name border-failed">Default suite</span>
-=======
-              <span class="suite-name border-passed">Default suite</span>
->>>>>>> 0faa63f60decdf738efa1dff8e7ddf7d9ef36d4d
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -58,11 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-<<<<<<< HEAD
-                    <span>C:\Users\acer\AppData\Local\Temp\testng-eclipse--1000173106\testng-customsuite.xml</span>
-=======
-                    <span>C:\Users\acer\AppData\Local\Temp\testng-eclipse--1759200843\testng-customsuite.xml</span>
->>>>>>> 0faa63f60decdf738efa1dff8e7ddf7d9ef36d4d
+                    <span>C:\Users\acer\AppData\Local\Temp\testng-eclipse-1803235954\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +92,6 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-<<<<<<< HEAD
                     <span class="method-stats">1 method, 1 failed,   </span>
                   </li>
                   <li>
@@ -116,27 +103,10 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.fest.TechFest" class="method navigator-link" hash-for-method="techFest">techFest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-Default_suite -->
-=======
-                    <span class="method-stats">1 method,   1 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
-                    </span>
-                    <div class="method-list-content passed suite-Default_suite">
-                      <span>
-                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="com.fest.TechFest" class="method navigator-link" hash-for-method="event">event</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-Default_suite -->
->>>>>>> 0faa63f60decdf738efa1dff8e7ddf7d9ef36d4d
+                    </div> <!-- method-list-content failed suite-Default_suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -148,33 +118,26 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
-<<<<<<< HEAD
           <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-=======
-          <div class="suite-Default_suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
->>>>>>> 0faa63f60decdf738efa1dff8e7ddf7d9ef36d4d
               <span class="class-name">com.fest.TechFest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-<<<<<<< HEAD
-                  <a name="techFest">
-                  </a> <!-- techFest -->
-                  <span class="method-name">techFest</span>
+                  <a name="event">
+                  </a> <!-- event -->
+                  <span class="method-name">event</span>
                   <div class="stack-trace">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//input[@name=&apos;save&apos;]&quot;}
   (Session info: chrome=133.0.6943.54)
 For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception
 Build info: version: &apos;4.28.1&apos;, revision: &apos;73f5ad48a2&apos;
 System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;21.0.5&apos;
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [570b5e33df7d76a5a15f4900f298b5d3, findElement {value=//input[@name=&apos;save&apos;], using=xpath}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 133.0.6943.54, chrome: {chromedriverVersion: 133.0.6943.53 (9a80935019b0..., userDataDir: C:\Users\acer\AppData\Local...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:62568}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:62568/devtoo..., se:cdpVersion: 133.0.6943.54, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: 570b5e33df7d76a5a15f4900f298b5d3
+Command: [86ca1472d84492ac2e4212e7a86dd0d4, findElement {value=//input[@name=&apos;save&apos;], using=xpath}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 133.0.6943.54, chrome: {chromedriverVersion: 133.0.6943.53 (9a80935019b0..., userDataDir: C:\Users\acer\AppData\Local...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:63339}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:63339/devtoo..., se:cdpVersion: 133.0.6943.54, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: 86ca1472d84492ac2e4212e7a86dd0d4
 	at java.base/jdk.internal.reflect.DirectConstructorHandleAccessor.newInstance(DirectConstructorHandleAccessor.java:62)
 	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:502)
 	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:486)
@@ -189,7 +152,7 @@ Session ID: 570b5e33df7d76a5a15f4900f298b5d3
 	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:59)
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:368)
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:362)
-	at com.fest.TechFest.techFest(TechFest.java:152)
+	at com.fest.TechFest.event(TechFest.java:151)
 	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
 	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
 	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:141)
@@ -225,20 +188,7 @@ Session ID: 570b5e33df7d76a5a15f4900f298b5d3
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\acer\AppData\Local\Temp\testng-eclipse--1000173106\testng-customsuite.xml</span>
-=======
-                  <a name="event">
-                  </a> <!-- event -->
-                  <span class="method-name">event</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-passed -->
-        </div> <!-- panel Default_suite -->
-        <div panel-name="test-xml-Default_suite" class="panel">
-          <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\acer\AppData\Local\Temp\testng-eclipse--1759200843\testng-customsuite.xml</span>
->>>>>>> 0faa63f60decdf738efa1dff8e7ddf7d9ef36d4d
+            <span class="header-content">C:\Users\acer\AppData\Local\Temp\testng-eclipse-1803235954\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -289,24 +239,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-<<<<<<< HEAD
-data.setCell(0, 1, 'techFest')
-data.setCell(0, 2, 'com.fest.TechFest')
-data.setCell(0, 3, 9864);
-=======
 data.setCell(0, 1, 'event')
 data.setCell(0, 2, 'com.fest.TechFest')
-data.setCell(0, 3, 5895);
->>>>>>> 0faa63f60decdf738efa1dff8e7ddf7d9ef36d4d
+data.setCell(0, 3, 14716);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-<<<<<<< HEAD
-              <span class="suite-total-time">Total running time: 9 seconds</span>
-=======
-              <span class="suite-total-time">Total running time: 5 seconds</span>
->>>>>>> 0faa63f60decdf738efa1dff8e7ddf7d9ef36d4d
+              <span class="suite-total-time">Total running time: 14 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -334,13 +274,9 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.fest.TechFest</div> <!-- chronological-class-name -->
               <div class="test-method">
-<<<<<<< HEAD
                 <img src="failed.png">
                 </img>
-                <span class="method-name">techFest</span>
-=======
                 <span class="method-name">event</span>
->>>>>>> 0faa63f60decdf738efa1dff8e7ddf7d9ef36d4d
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
